# sRender

./: .gitignore  CMakeLists.txt  README.md  concrete.ppm  image (13th copy).ppm  image (15th copy).ppm  image (17th copy).ppm  image (18th copy).ppm  image (5th copy).ppm  image (6th copy).ppm  image (7th copy).ppm  image (9th copy).ppm  image (copy).ppm  image copy 10.ppm  image copy 12.ppm  image copy 14.ppm  image copy 14.ppm.xmp  image copy 15.ppm  image copy 18.ppm  image copy 2.ppm  image copy 20.ppm  image copy 22.ppm  image copy 23.ppm  image copy 25.ppm  image copy 26.ppm  image copy 5.ppm  image copy 8.ppm  image copy 9.ppm  image copy.ppm  image.ppm  image.ppm.xmp  image11.ppm  image3.ppm  integrator.cpp
brdfs/: diffuse.cpp  diffuse.h  mirror.cpp  specular.h
images/: fresnelblend.ppm  ggx16samples.ppm  ggxwalls16.ppm  ggxwalls64.ppm  glassdragon.ppm  image copy.ppm  orennayar0.ppm
images/misc/: image (10th copy).ppm  image (11th copy).ppm  image (12th copy).ppm  image (14th copy).ppm  image (16th copy).ppm  image (3rd copy).ppm  image (4th copy).ppm  image (8th copy).ppm  image (another copy).ppm  image copy 11.ppm  image copy 16.ppm  image copy 17.ppm  image copy 19.ppm  image copy 21.ppm  image copy 34.ppm  image copy 35.ppm  image copy 36.ppm  image copy 37.ppm  image copy 38.ppm  image copy 7.ppm  image2.ppm  image5.ppm  orennayar.ppm
materials/: brown.yaml  glass.yaml  purple.yaml  shiny.yaml
scenes/: box.1.yaml  box.yaml  box2.yaml  spheres.yaml  spheres2.yaml
src/: bunny.ply  main.cpp  triangles.ply
test/: image.ppm  power.ppm
(+66 files in other folders)
